# mecha-wayland

./: Cargo.toml  Cross.toml  Dockerfile.cross  flake.nix  justfile
.cargo/: config.toml
compositor/: Cargo.toml
compositor/src/: main.rs
compositor/src/client_window/: mod.rs  render.rs
compositor/src/protocols/: mod.rs  wl_callback.rs  wl_compositor.rs  wl_data_device_manager.rs  wl_display.rs  wl_keyboard.rs  wl_pointer.rs  wl_region.rs  wl_registry.rs  wl_seat.rs  wl_shm.rs  wl_surface.rs  wlr_layer_shell.rs  xdg_shell.rs
compositor/src/rect/: algo.rs  mod.rs
crates/_wayland/src/: ext_session_lock.rs  wire.rs  wl_buffer.rs  wl_compositor.rs  wl_keyboard.rs  wl_seat.rs  zwp_linux_dmabuf.rs
crates/animation/: Cargo.toml
crates/animation/examples/: tui.rs
crates/animation/src/: easing.rs  lib.rs
crates/app/: Cargo.toml
crates/app-macro/: Cargo.toml
crates/app-macro/src/: lib.rs
crates/app/examples/: propagation.rs
crates/app/src/: compose.rs  event.rs  lib.rs  module.rs  runtime.rs
crates/app/tests/: app.rs  compose.rs  context_handler.rs  derive_context.rs  derive_context_ui.rs  derive_state.rs  dispatch.rs  lens.rs  propagation.rs  state.rs
crates/assets/: Cargo.toml
crates/assets/src/: builder.rs  lib.rs
crates/clock/: Cargo.toml  atlas.toml
crates/clock/src/: main.rs  state.rs  wayland_ext.rs
crates/counter/: Cargo.toml
crates/counter/src/: main.rs  renderer.rs  ring.rs  timer.rs  wayland.rs  wayland_module.rs
crates/counter/src/wayland/: wl_buffer.rs  wl_callback.rs  wl_compositor.rs  wl_display.rs  wl_keyboard.rs  wl_pointer.rs  wl_registry.rs  wl_seat.rs  wl_shm.rs  wl_surface.rs  wl_touch.rs  zwlr_layer_shell.rs  zwp_linux_dmabuf.rs
crates/dbus/: Cargo.toml
crates/dbus/examples/: file_reader.rs  network_manager.rs  widget_service.rs
crates/dbus/src/: connection.rs  dbus.rs  fd.rs  fdo.rs  lib.rs  macros.rs  util.rs
crates/demo/: Cargo.toml
crates/demo/src/: main.rs
crates/event-manager/: Cargo.toml
crates/event-manager/src/: lib.rs
crates/interactivity/: Cargo.toml
crates/interactivity/src/: lib.rs
crates/io-ring/: Cargo.toml
crates/io-ring/src/: ring.rs
crates/io-runtime/: Cargo.toml
crates/io-runtime/src/: channel.rs  error.rs  event.rs  lib.rs  ring.rs
crates/launcher/: Cargo.toml  build.rs
crates/launcher/counter/: Cargo.toml
crates/launcher/counter/src/: lib.rs
crates/launcher/demo-pagination/: Cargo.toml  atlas.toml
crates/launcher/demo-pagination/src/: main.rs
crates/launcher/demo-pagination/src/pagination/: events.rs  mod.rs  pages.rs  state.rs
crates/launcher/lock-screen/: Cargo.toml  build.rs
crates/launcher/lock-screen/src/: handlers.rs  layer_ui.rs  lock_ui.rs  main.rs  render.rs  time.rs
crates/launcher/lock-screen/src/widgets/: clock.rs  mod.rs  unlock_circle.rs
crates/launcher/nav-bar/: Cargo.toml  atlas.toml  build.rs
crates/launcher/nav-bar/src/: main.rs
crates/launcher/navbar/: Cargo.toml
crates/launcher/navbar/src/: lib.rs
crates/launcher/notification/: Cargo.toml  atlas.toml  build.rs
crates/launcher/notification/src/: lib.rs  main.rs  notification_entry.rs  renderer.rs
crates/launcher/pagination/: Cargo.toml
crates/launcher/pagination/src/: lib.rs
crates/launcher/pagination/src/pagination/: mod.rs  state.rs
crates/launcher/src/: main.rs  render_loop.rs  renderer_events.rs  waiter.rs
crates/launcher/status-bar/: Cargo.toml  atlas.toml
crates/launcher/status-bar/src/: lib.rs  main.rs  time.rs
crates/launcher/status-bar/src/widgets/: battery.rs  bluetooth.rs  clock.rs  mod.rs  wifi.rs
crates/launcher/volume/: Cargo.toml
crates/launcher/volume/src/: lib.rs  slider.rs
crates/layout/: Cargo.toml
crates/layout-macro/: Cargo.toml
crates/layout-macro/src/: lib.rs
crates/layout/examples/: fold_check.rs
crates/layout/src/: lib.rs
crates/renderer/: Cargo.toml
crates/renderer/benches/: draw_quad.rs  draw_rect.rs  lavender.rs  mod.rs
crates/renderer/src/: commands.rs  dmabuf.rs  image_surface.rs  lib.rs  text.rs  texture.rs
crates/renderer/src/commands/: clear_color.rs  draw_mono_sprite.rs  draw_quad.rs  draw_rect.rs  draw_text.rs
crates/timer/: Cargo.toml
crates/ui/: Cargo.toml
crates/ui-macro/: Cargo.toml
crates/ui/src/: lib.rs
crates/utils/: Cargo.toml
crates/volume/: Cargo.toml  atlas.toml  build.rs
crates/wayland/: Cargo.toml  build.rs
crates/wayland-gen/: Cargo.toml
crates/wayland-gen/src/: ast.rs  lib.rs  parser.rs
crates/wayland-gen/src/generator/: enums.rs  event.rs  interface.rs  mod.rs  request.rs  types.rs  utils.rs
crates/wayland-protocols/: Cargo.toml  build.rs
crates/wayland/examples/: basic_window.rs  shm_window.rs
crates/wayland/src/: client.rs  connection.rs  ext_session_lock.rs  ext_session_lock_manager.rs  ext_session_lock_surface.rs  helper.rs  lib.rs  object.rs  registry.rs  server.rs  wl_buffer.rs  wl_callback.rs  wl_compositor.rs  wl_display.rs  wl_keyboard.rs  wl_pointer.rs  wl_registry.rs  wl_seat.rs  wl_shm.rs  wl_surface.rs  wl_touch.rs  zwlr_layer_shell.rs  zwp_linux_dmabuf.rs
crates/wayland/src/proto/: manual.rs  mod.rs
crates/wayland/src/proto/manual/: client.rs  mod.rs  server.rs
crates/window-manager/: Cargo.toml
crates/window-manager/src/: connection.rs  globals.rs  lib.rs  prelude.rs  render.rs  window.rs
launcher/: Cargo.toml
launcher/counter/: Cargo.toml
launcher/counter/src/: lib.rs
launcher/lock-screen/: Cargo.toml  atlas.toml
launcher/lock-screen/src/: main.rs  render.rs  surface.rs
launcher/navbar/: Cargo.toml
launcher/navbar/src/: lib.rs
launcher/notification/: Cargo.toml
launcher/notification/src/: lib.rs  notification_entry.rs
launcher/pagination/: Cargo.toml
launcher/pagination/src/: lib.rs
launcher/pagination/src/pagination/: pages.rs
launcher/src/: main.rs
launcher/status-bar/: Cargo.toml  atlas.toml
launcher/status-bar/src/: lib.rs
launcher/status-bar/src/widgets/: bluetooth.rs  clock.rs  wifi.rs
launcher/volume/: Cargo.toml
launcher/volume/src/: button.rs  lib.rs  slider.rs
scripts/: bench-remote.sh  pre-commit.sh
(+45 files in other folders)
