[package]
name = "counter"
version = "0.1.0"
edition = "2024"

[dependencies]
app = { path = "../app" }
renderer = { path = "../renderer" }
assets = { path = "../assets" }
io-ring = { path = "../io-ring" }
timer = { path = "../timer" }
wayland = { path = "../wayland" }
frunk = "0.4"
anyhow = { workspace = true }
glow = { workspace = true }
png = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
io-uring = { workspace = true }
libc = { workspace = true }
taffy = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
assets = { path = "../assets", features = ["builder"] }
