[package]
name = "launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
wayland-protocols = { path = "../wayland-protocols" }
renderer = { path = "../renderer" }
utils = { path = "../utils" }
layout = { path = "../layout" }
assets = { path = "../assets" }
anyhow = { workspace = true }
glow = { workspace = true }
png = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
puffin_http = {version = "0.16.1", optional = true}
puffin = {version = "0.19.1", optional = true}

[build-dependencies]
renderer = { path = "../renderer" }
glow     = { workspace = true }
png      = { workspace = true }
anyhow   = { workspace = true }
assets   = { path = "../assets", features = ["builder"] }

[features]
default = []
profile = ["dep:puffin", "dep:puffin_http"]
