
[package]
name = "launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
app.workspace = true
io-ring.workspace = true
window-manager.workspace = true
interactivity = { path = "../interactivity" }
launcher-navbar = { path = "navbar" }
launcher-status-bar = { path = "status-bar" }
launcher-counter = { path = "counter" }
launcher-pagination = {path = "pagination"}
