[package]
name = "wayland-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
quick-xml = { workspace = true }
serde = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
bitflags = { workspace = true }
heck = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
