[package]
name = "window-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
app.workspace = true
io-ring.workspace = true
wayland = { workspace = true, features = ["client"] }
libc.workspace = true
renderer = { path = "../renderer" }
ui = { path = "../ui" }
assets = { path = "../assets" }
interactivity = { path = "../interactivity" }
taffy = { workspace = true }
anyhow = { workspace = true }
