[package]
name = "demo-pagination"
version = "0.1.0"
edition = "2024"

[dependencies]
app = { path = "../../app" }
renderer = { path = "../../renderer" }
assets = { path = "../../assets" }
utils = { path = "../../utils" }
io-ring = { path = "../../io-ring" }
wayland = { path = "../../wayland" }
ui = { path = "../../ui" }
interactivity = { path = "../../interactivity" }
animation = { path = "../../animation" }
taffy = { workspace = true }
libc = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
assets = { path = "../../assets", features = ["builder"] }
