[package]
name = "lock-screen"
version = "0.1.0"
edition = "2024"

[dependencies]
app = { path = "../../app" }
renderer = { path = "../../renderer" }
assets = { path = "../../assets" }
utils = { path = "../../utils" }
io-ring = { path = "../../io-ring" }
timer = { path = "../../timer" }
wayland = { path = "../../wayland" }
interactivity = { path = "../../interactivity" }

ui = { path = "../../ui" }

taffy = { workspace = true }
libc = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
assets = { path = "../../assets", features = ["builder"] }
