
[package]
name = "launcher-navbar"
version = "0.1.0"
edition = "2024"

[lib]
name = "launcher_navbar"

[dependencies]
ui = { path = "../../ui" }
assets = { path = "../../assets" }
utils = { path = "../../utils" }
animation = { path = "../../animation" }
interactivity = { path = "../../interactivity" }
notification = { path = "../notification" }
launcher-status-bar = { path = "../status-bar" }
taffy.workspace = true
