[package]
name = "launcher-pagination"
version = "0.1.0"
edition = "2024"


[lib]
name = "launcher_pagination"

[dependencies]
assets = { path = "../../assets" }
interactivity = { path = "../../interactivity" }
ui = { path = "../../ui" }
utils = { path = "../../utils" }
animation = { path = "../../animation" }
taffy = { workspace = true }
launcher-counter = { path = "../counter" }

