
[package]
name = "launcher-status-bar"
version = "0.1.0"
edition = "2024"

[lib]
name = "launcher_status_bar"

[dependencies]
app = { path = "../../app" }
assets = { path = "../../assets" }
utils = { path = "../../utils" }
ui = { path = "../../ui" }
timer = { path = "../../timer" }
libc.workspace = true
taffy.workspace = true

[build-dependencies]
assets = { path = "../../assets", features = ["builder"] }
